Remove Java and Fortran product modules
Remove the Java/JNI and Fortran source trees, examples, tests, build
options, installation components, presets, and CI workflows.

Keep C-level file-format compatibility semantics, h5format_convert
naming, and HDFS VFD JNI discovery intact. Update current documentation
and build metadata so only supported products are exposed.

Validated with Visual Studio 18 2026 / MSVC 19.51 Release build, 2817
CTest passes (37 disabled), and an install scan with no Java or Fortran
artifacts or exports.